--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -12,6 +12,8 @@ html(lang='ja')
         i.material-icons dashboard
         span.label Dashboard
       .dropdown
+        .mark
+          i.material-icons add
         .nav-actions
           for i in [0, 1, 2]
             .nav-action some action #{i}
