--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -15,6 +15,7 @@ $color-content-dark-lighter = #30312f
 $color-content-dark = #2b2b27
 $color-border-medium-lighter = #aca5ad
 $color-border-medium = #83797a
+$color-warn = #4d4f5b
 
 // border-width
 $border-width-large = 4px
@@ -26,6 +27,8 @@ $border-width-tiny = 1px
 $duration-medium = 225ms
 
 // timing function
+$timing-function-ease-out-expo = cubic-bezier(0.19, 1, 0.22, 1)
+$timing-function-ease-in-expo = cubic-bezier(0.95, 0.05, 0.795, 0.035)
 $timing-function-ease-out-quart = cubic-bezier(0.165, 0.84, 0.44, 1)
 $timing-function-ease-in-quart = cubic-bezier(0.895, 0.03, 0.685, 0.22)
 $timing-function-ease-out-sine = cubic-bezier(0.39, 0.575, 0.565, 1)
