--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -13,6 +13,7 @@ $color-background-light-darker = #c9c3c1
 $color-background-light-darkest = #a9a49e
 $color-content-dark-lighter = #30312f
 $color-content-dark = #2b2b27
+$color-content-light = #f3eeeb
 $color-border-medium-lighter = #aca5ad
 $color-border-medium = #83797a
 $color-warn = #4d4f5b
@@ -33,3 +34,6 @@ $timing-function-ease-out-quart = cubic-bezier(0.165, 0.84, 0.44, 1)
 $timing-function-ease-in-quart = cubic-bezier(0.895, 0.03, 0.685, 0.22)
 $timing-function-ease-out-sine = cubic-bezier(0.39, 0.575, 0.565, 1)
 $timing-function-ease-in-sine = cubic-bezier(0.47, 0, 0.745, 0.715)
+$timing-function-ease-inout-sine = cubic-bezier(0.445, 0.05, 0.55, 0.95)
+$timing-function-ease-inout-sine-faster = cubic-bezier(.35,.06,.11,1)
+$timing-function-ease-inout-sine-slower = cubic-bezier(.9,0,.71,.95)
