--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -17,3 +17,14 @@ html(lang='ja')
         .nav-actions
           for i in [0, 1, 2]
             .nav-action some action #{i}
+.foo
+  .bar
+  .baz
+  .qux
+    ul.size-keeper
+      li: i.material-icons looks_one
+      li: i.material-icons looks_two
+      li: i.material-icons looks_3
+      li: i.material-icons looks_4
+      li: i.material-icons looks_5
+      li: i.material-icons looks_6
