--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -25,7 +25,7 @@ $border-width-small = 2px
 $border-width-tiny = 1px
 
 // duration
-$duration-medium = 225ms
+$duration-medium = .8s
 
 // timing function
 $timing-function-ease-out-expo = cubic-bezier(0.19, 1, 0.22, 1)
