--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -37,3 +37,7 @@ $timing-function-ease-in-sine = cubic-bezier(0.47, 0, 0.745, 0.715)
 $timing-function-ease-inout-sine = cubic-bezier(0.445, 0.05, 0.55, 0.95)
 $timing-function-ease-inout-sine-faster = cubic-bezier(.35,.06,.11,1)
 $timing-function-ease-inout-sine-slower = cubic-bezier(.9,0,.71,.95)
+
+foovar('src/js/StyleVariables.js', {
+  include: '^\$'
+})
